ajustei o cabeçalho, quase pronto
Adicionei mais interatividade com o tamanho da tela. Alterei o tamanho do título, a forma da lupa de pesquisa e dos links. Adicionei as cores corretas. Adicionei transições.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wisual Modas</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
-        <h1>Wisual Modas</h1>
-        <nav>
-            <a href="#">WhatsApp</a>
-            <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
-            <a href="#">Endereço</a>
-        </nav>
+        <div id="h1">
+            <h1>Wisual Modas</h1>
+        </div>
+
+        <div id="search">
+            <img src="imagens/lupa-p.png" alt="Pesquisar">
+            <p>Pesquisar</p>
+        </div>
+
+        <ul id="navigation">
+            <li><a href="#">WhatsApp</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Endereço</a></li>
+        </ul>
     </header>
 </body>
 </html>
