--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <li><a href="#">Instagram</a></li>
             <li><a href="#">Facebook</a></li>
             <li><a href="#">Endereço</a></li>
+            
         </ul>
+        <img src="" alt="">
     </header>
 </body>
 </html>
