Ajustes no header
Posições e imagens

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         </div>
 
         <ul id="navigation">
-            <li><a href="#">WhatsApp</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Endereço</a></li>
+            <li><a href="#"><img src="imagens/whatsapp-48.png" alt="Whatsapp"></a></li>
+            <li><a href="#"><img src="imagens/instagram-4-48.png" alt="Instagram"></a></li>
+           <li><a href="#"><img src="imagens/pin-8-48.png" alt="Localização"></a></li>
             
         </ul>
     </header>
