--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <ul id="navigation">
             <li><a href="#"><img src="imagens/whatsapp-48.png" alt="Whatsapp"></a></li>
             <li><a href="#"><img src="imagens/instagram-4-48.png" alt="Instagram"></a></li>
-           <li><a href="#"><img src="imagens/pin-8-48.png" alt="Localização"></a></li>
+           <li><a href="https://www.google.com.br/maps/place/R.+Gen.+Ernesto+Dorneles,+220+-+Centro,+Igrejinha+-+RS,+95650-000/@-29.5751496,-50.7965688,17z/data=!3m1!4b1!4m6!3m5!1s0x951923b2ce28d90f:0xb5c8ae8aa8678574!8m2!3d-29.5751544!4d-50.7916979!16s%2Fg%2F11fj1nwmwq?entry=ttu" target="_blank"><img src="imagens/pin-8-48.png" alt="Localização"></a></li>
         </ul>
 
         <ul id="navigationmobile">
             <li><a href="#"><img src="imagens/whatsapp-48.png" alt="Whatsapp"></a></li>
             <li><a href="#"><img src="imagens/instagram-4-48.png" alt="Instagram"></a></li>
-            <li><a href="#"><img src="imagens/pin-8-48.png" alt="Localização"></a></li>
+            <li><a href="https://www.google.com.br/maps/place/R.+Gen.+Ernesto+Dorneles,+220+-+Centro,+Igrejinha+-+RS,+95650-000/@-29.5751496,-50.7965688,17z/data=!3m1!4b1!4m6!3m5!1s0x951923b2ce28d90f:0xb5c8ae8aa8678574!8m2!3d-29.5751544!4d-50.7916979!16s%2Fg%2F11fj1nwmwq?entry=ttu" target="_blank"><img src="imagens/pin-8-48.png" alt="Localização"></a></li>
         </ul>
     </header>
 </body>
