--- a/index.html
+++ b/index.html
@@ -31,11 +31,20 @@
         </ul>
     </header>
     <main>
-        <section id="face">
+        <div id="face">
             <picture>
-                
+                <source media="(max-width: 1180px)" srcset="imagens/teste-1000-1.png">
+                <img srcset="imagens/teste-1200.png">
             </picture>
-        </section>
+        </div>
+        <div id="section">
+            <a href="#" class="divisor-section"><img src="imagens/masc-1_4.png" alt="" id="masc"></a>
+            <a href="#" class="divisor-section"><img src="imagens/fem-1_1.png" alt="" id="fem"></a>
+            <a href="#"><img src="imagens/masc-1_4.png" alt="" id="inf"></a>
+        </div>
+        <div id="section-masc">
+            <p>Masculino</p>
+        </div>
     </main>
 </body>
 </html>
