--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             </picture>
         </div>
         <div id="section">
-            <a href="#" class="divisor-section"><img src="imagens/masc-1_4.png" alt="" id="masc"></a>
-            <a href="#" class="divisor-section"><img src="imagens/fem-1_1.png" alt="" id="fem"></a>
-            <a href="#"><img src="imagens/masc-1_4.png" alt="" id="inf"></a>
-        </div>
-        <div id="section-masc">
-            <p>Masculino</p>
+            <a href="#" class="divisor-section" id="img01"><img src="imagens/masc-1_4.png" alt="" id="masc"></a>
+            <div id="section-masc">
+                <p>Masculino</p>
+            </div>
+            <a href="#" class="divisor-section" id="img02"><img src="imagens/fem-1_1.png" alt="" id="fem"></a>
+            <a href="#" id="img03"><img src="imagens/masc-1_4.png" alt="" id="inf"></a>
         </div>
     </main>
 </body>
