adicionei a informação do section e opacidade com o hover

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             </picture>
         </div>
         <div id="section">  <!-- Primeira imagem -link- da área de setores: masculino -->
-            <a href="pages/mascpage.html" id="img01">
+            <a href="pages/mascpage.html" id="img01" class="divisor-img01">
+                <div id="info-img01">
+                    <p style="color: black;">Vestuário Masculino.</p>
+                </div>
                 <picture>
                     <source media="(max-width: 700px)" srcset="imagens/masc-150px.png">
                     <source media="(max-width: 870px)" srcset="imagens/masc-200px.png" class="img870px-a">
@@ -46,8 +49,11 @@
                     <img src="imagens/masc-1_4.png" alt="" id="masc">
                 </picture>
             </a>
-            <a href="pages/fempage.html" id="img02"> <!-- Segunda imagem -link- da área de setores: feminino -->
+            <a href="pages/fempage.html" id="img02" class="divisor-img02"> <!-- Segunda imagem -link- da área de setores: feminino -->
                 <picture>
+                    <div id="info-img02">
+                        <p style="color: black;">Vestuário Feminino</p>
+                    </div>
                     <source media="(max-width: 700px)" srcset="imagens/fem-150px.png">
                     <source media="(max-width: 870px)" srcset="imagens/fem-200px.png" class="img870px-b">
                     <source media="(max-width: 1070px)" srcset="imagens/fem-250px.png">
@@ -56,6 +62,9 @@
             </a>
             <a href="pages/kidspage.html" id="img03"> <!-- Tecreira imagem -link- da área de setores: infantil -->
                 <picture>
+                    <div id="info-img03">
+                        <p style="color: black;">Área Kids</p>
+                    </div>
                     <source media="(max-width: 700px)" srcset="imagens/masc-150px.png">
                     <source media="(max-width: 870px)" srcset="imagens/masc-200px.png" class="img870px-c">
                     <source media="(max-width: 1070px)" srcset="imagens/masc-250px.png">
