--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div id="info-img01">
                     <p style="color: black;">Vestuário Masculino.</p>
                 </div>
-                <picture>
+                <picture #img01-center>
                     <source media="(max-width: 700px)" srcset="imagens/masc-150px.png">
                     <source media="(max-width: 870px)" srcset="imagens/masc-200px.png" class="img870px-a">
                     <source media="(max-width: 1070px)" srcset="imagens/masc-250px.png">
@@ -58,17 +58,6 @@
                     <source media="(max-width: 870px)" srcset="imagens/fem-200px.png" class="img870px-b">
                     <source media="(max-width: 1070px)" srcset="imagens/fem-250px.png">
                     <img src="imagens/fem-1_1.png" alt="" id="fem">
-                </picture>
-            </a>
-            <a href="pages/kidspage.html" id="img03"> <!-- Tecreira imagem -link- da área de setores: infantil -->
-                <picture>
-                    <div id="info-img03">
-                        <p style="color: black;">Área Kids</p>
-                    </div>
-                    <source media="(max-width: 700px)" srcset="imagens/masc-150px.png">
-                    <source media="(max-width: 870px)" srcset="imagens/masc-200px.png" class="img870px-c">
-                    <source media="(max-width: 1070px)" srcset="imagens/masc-250px.png">
-                    <img src="imagens/masc-1_4.png" alt="" id="masc">
                 </picture>
             </a>
         </div>
