--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         </ul>
     </header>
     <main>
+        <div id="menu"> <!-- Menu -->
+            <ul>
+                <li><a href="">Novidades</a></li>
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Feminino</a></li>
+                <li><a href="">Masculino</a></li>
+                <li><a href="">Marcas</a></li>
+            </ul>
+        </div>
+
         <div id="face">  <!-- Imagem principal (maior) da face do site -->
             <picture>
                 <source media="(max-width: 1180px)" srcset="imagens/teste-1000-1.png">
